--- a/PRIMA LECTIE/styles/exercise8.css
+++ b/PRIMA LECTIE/styles/exercise8.css
@@ -18,36 +18,43 @@
 } */
 
 /* 8c */
-.google-page-div {
-  border: solid black;
-  display: inline-block;
-  margin-left: 700px;
-  margin-top: 200px;
-}
-.logo-class {
-  margin-left: 120px;
-  display: block;
-  margin-bottom: 10px;
-  cursor: pointer;
+div {
+  text-align: center;
 }
 
-.input-class {
-  margin-top: 0;
+img {
+  width: 200px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+input {
+  border: none;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 16px;
+  padding-right: 16px;
   font-size: 16px;
   width: 500px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
   border-radius: 30px;
-  border: none;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
-  display: block;
+  margin-bottom: 30px;
 }
 
 button {
-  cursor: pointer;
+  background-color: rgb(245, 245, 245);
+  border: none;
+  font-size: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
+
+.button-class1 {
+  margin-right: 10px;
+}
+
 /* 8d */
 /* .first-class {
   width: 88px;
