--- a/PRIMA LECTIE/styles/exercitiul10.css
+++ b/PRIMA LECTIE/styles/exercitiul10.css
@@ -1,11 +1,9 @@
-.box-class {
-  margin-right: 15px;
+p {
   font-family: Arial;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
-  display: inline-block;
-  width: 200px;
+}
+.box-class {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   padding-bottom: 10px;
-  vertical-align: top;
 }
 .image-class {
   width: 200px;
@@ -48,6 +46,16 @@ p {
 }
 
 .mutual-friend-div {
+  display: grid;
+  grid-template-columns: 35px 1fr;
+  align-items: center;
+  margin-left: 8px;
   margin-bottom: 10px;
-  padding-left: 8px;
+}
+
+.grid-allingnment {
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  column-gap: 20px;
+  row-gap: 20px;
 }
