--- a/PRIMA LECTIE/project/styles/header.css
+++ b/PRIMA LECTIE/project/styles/header.css
@@ -6,19 +6,89 @@
   justify-content: space-between;
 }
 .left-section {
-  width: 150px;
-  background-color: lightblue;
+  display: flex;
+  align-items: center;
 }
 
 .middle-section {
+  display: flex;
   flex: 1;
-  background-color: lightpink;
   margin-left: 70px;
   margin-right: 35px;
   max-width: 500px;
+  align-items: center;
 }
 
 .right-section {
-  width: 200px;
-  background-color: lightblue;
+  display: flex;
+  width: 180px;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 20px;
+  flex-shrink: 0;
+}
+.hamburger-menu {
+  height: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+.youtube-logo {
+  height: 20px;
+}
+.search-button {
+  height: 40px;
+  width: 60px;
+  background-color: rgb(240, 240, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  margin-left: -1px;
+  margin-right: 10px;
+}
+
+.voice-search-button {
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: none;
+  background-color: rgb(245, 245, 245);
+}
+
+.search-bar {
+  flex: 1;
+  padding-left: 10px;
+  font-size: 16px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  height: 36px;
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  width: 0;
+}
+.search-bar::placeholder {
+  font-family: Roboto, Arial;
+  font-size: 16px;
+}
+.search-icon {
+  height: 25px;
+  margin-top: 4px;
+}
+.voice-search-icon {
+  height: 24px;
+  margin-top: 4px;
+}
+.upload-icon {
+  height: 24px;
+}
+.notifications-icon {
+  height: 24px;
+}
+
+.current-user-picture {
+  height: 32px;
+  border-radius: 16px;
+}
+.youtube-apps-icon {
+  height: 24px;
 }
