--- a/PRIMA LECTIE/styles/exercitiul13.css
+++ b/PRIMA LECTIE/styles/exercitiul13.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: space-between;
 } */
-div {
+/* div {
   font-family: Arial;
 }
 
@@ -36,6 +36,7 @@ div {
   align-items: center;
   display: flex;
   width: 400px;
+  margin-bottom: 20px;
 }
 .div-with-time {
   display: flex;
@@ -52,8 +53,86 @@ div {
 }
 .first-container {
   margin: 50px;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
   width: 400px;
   padding: 10px;
   border-radius: 4px;
+} */
+
+div {
+  font-family: Arial;
+}
+
+.tweet {
+  display: flex;
+  flex-direction: row;
+  width: 420px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.profile-picture-column {
+  margin-right: 10px;
+}
+
+.img-class {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 30px;
+}
+
+.tweet-column {
+  flex: 1;
+}
+
+.tweet-header {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;
+}
+
+.tweet-author {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.tweet-author-handle {
+  color: rgb(111, 111, 111);
+}
+
+.tweet-content {
+  line-height: 20px;
+  margin-bottom: 15px;
+}
+
+.video-preview {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(200, 200, 200);
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.thumbnail-column {
+  width: 100px;
+  height: 100px;
+  background-color: rgb(220, 220, 220);
+  margin-right: 10px;
+}
+
+.video-info-column {
+  flex: 1;
+}
+
+.video-website {
+  color: rgb(111, 111, 111);
+  margin-bottom: 3px;
+}
+
+.video-title {
+  line-height: 22px;
 }
