started nested flexbox exercises

--- a/PRIMA LECTIE/styles/exercitiul13.css
+++ b/PRIMA LECTIE/styles/exercitiul13.css
@@ -58,23 +58,23 @@
   padding: 10px;
   border-radius: 4px;
 } */
-
 div {
   font-family: Arial;
 }
 
 .tweet {
   display: flex;
-  flex-direction: row;
-  width: 420px;
+  width: 400px;
+  align-items: top;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  padding: 10px;
   margin-top: 10px;
   margin-left: 20px;
 }
 
-.profile-picture-column {
+.image-div {
   margin-right: 10px;
 }
-
 .img-class {
   width: 60px;
   height: 60px;
@@ -82,57 +82,38 @@ div {
   border-radius: 30px;
 }
 
-.tweet-column {
-  flex: 1;
-}
-
 .tweet-header {
   display: flex;
-  flex-direction: row;
-  margin-bottom: 5px;
-}
-
-.tweet-author {
-  font-weight: bold;
-  margin-right: 5px;
-}
-
-.tweet-author-handle {
-  color: rgb(111, 111, 111);
-}
-
-.tweet-content {
-  line-height: 20px;
-  margin-bottom: 15px;
+  flex: 1;
 }
 
 .video-preview {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(200, 200, 200);
-  border-radius: 15px;
+  border: solid rgb(150, 150, 150);
+  border-radius: 10px;
   overflow: hidden;
+  border-width: 1px;
+  align-items: center;
 }
 
-.thumbnail-column {
+.name-class {
+  margin-right: 8px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.tag-class {
+  color: rgb(150, 150, 150);
+}
+.thumbnail-section {
   width: 100px;
   height: 100px;
   background-color: rgb(220, 220, 220);
-  margin-right: 10px;
 }
-
-.video-info-column {
-  flex: 1;
+.paragraph-class {
+  line-height: 20px;
+  margin-bottom: 20px;
 }
-
-.video-website {
-  color: rgb(111, 111, 111);
-  margin-bottom: 3px;
-}
-
 .video-title {
-  line-height: 22px;
+  flex: 1;
+  padding: 10px;
 }
